styles.css
/* jshint esversion:6 */

/*///////////////////////////////////////////////////////////////////////////////////Tag selectors ////////////////////////////////////////////////////////////////////////////////////////////////*/

body {
  background-color: #171717;
  background-image: url(bgimgfull.png);

  /*2nd try parallax CSS+JS*/
    background-position: top center;
    background-attachment: scroll;
    background-size: cover;

    font-family: acumin-pro, sans-serif;
    font-weight: 400;
    font-style: normal;

    height: 80vh;
    /* width: 100%; */
    /* background-repeat: no-repeat; */


  /* padding-top: 75px; */       /*   to correctly set navbar */
}

html {
scroll-behavior: smooth;
}

/*1st try parallax*/
/* .parallax {
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
} */

 h2 {
   font-size: 2.2rem;
   font-weight: 900;
 }

 h3 { /*some name */
  color: #DDDDDD;
  font-weight: 700;
  margin-bottom: 1rem;
  text-align: center;
}

span {       /* Brand on the bottom */
  font-family: 'Gruppo', cursive;
  font-size: 2rem;
  font-weight: 400;
}

/*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
/*/////////////////////////////////////////////////////////////////////////////////// Navbar //////////////////////////////////////////////////////////////////////////////////////////////////////*/

.nav-move {                     /* A div for correct navbar moving */
  padding: 100px 0;
}

.navbar {
  padding-left: 3rem;
  padding-right: 3rem;          /* left-padding + logo padding but from the right; v.1: 7.2rem; v.2: 8.1; v.3 8.9 rem; last version: 3rem*/
}

.navbar-nav {                  /* to align word services with other text on page */
  padding-left: 1.5rem;
}

.navbar-brand {      /* disabled */
  color: #DDDDDD;
  display: none;
  font-family: 'Gruppo', cursive;
  font-size: 2rem;
  font-weight: 400;
  margin: 1px;
}

.brand {
  color: #DDDDDD;
  font-family: 'Gruppo', cursive;
  font-size: 2.3rem;
  font-weight: 400;
  position: absolute;
  top: 20px;
  left: 50px;
  z-index: 1;
}

.nav-item {
  font-size: 1.15rem;
  font-weight: 400;
  margin: 0 1.5rem;
}

.dropdown-menu {              /* disabled*/
  background-color: #f8f9fa;
}

.navbar-toggler-icon {
  height: 150px;
  width: 150px;
}

/*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
/*///////////////////////////////////////////////////////////////////////////////////Back to top button ///////////////////////////////////////////////////////////////////////////////////////////*/

.back-to-top {
  font-size: 1.5rem;
  position: fixed;
  top: 60px;
  right: 40px;
  z-index: 1;
  color: #e2e2e2;
  opacity: 0;
  pointer-events: none;
  transition: all .4s;          /* Other way to do: display: none; */
}

.back-to-top:hover {
  color: grey ;
}

.active {
  opacity: 1;
  pointer-events: auto;
}

.footer-button-color {
  color: #171717;
}

/*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
/*//////////////////////////////////////////////////////////////////////////////////////////// Header /////////////////////////////////////////////////////////////////////////////////////////////*/

.infobox {
  margin: 0 auto;
  padding: 70px 30px;
  width: 90%;
}

/* Wapka / Header */

#about-us {
  background-color: #171717;
  border-radius: 0 0 0 100%;
  box-shadow: 0 30px 55px black;
  color: #DDDDDD;
  font-size: 2.5rem;
  height: 90vh;
  padding-left: 14%;
  position: relative;
  right: 14%;        /* old:240px       !!!FINALLY wapka solved: position: relative, right: 14%, width: 114%, padding-left: 14%; !!!*/
  text-align: center;
  width: 114%;
  z-index: 0;
}

/*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
/*//////////////////////////////////////////////////////////////////////////////////////// Work section ///////////////////////////////////////////////////////////////////////////////////////////*/

.content-cell {
  margin-top: 4rem;
}

.content-video {
  display: block;
  margin: auto;
  height: 600;
  width: 400;
}

.pull-vid {
  margin-top: 6rem;
}

/* .rm-margin-bot {
  margin-bottom: 0;
} */

.content-photo {
  display: block;
  margin: auto;
  height: 630px;
  width: 420px;
}

.set-proper-size {
  width: 100%;
}

/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
/*/////////////////////////////////////////////////////////////////////////////////////// Services section ///////////////////////////////////////////////////////////////////////////////////////*/

#services {                                          /* Don't gonna combine with header on top styles */
  background-color: #171717;
  border-radius: 100% 0 0 0;
  box-shadow: 0 -30px 55px black;
  color: #DDDDDD;
  font-size: 2.5rem;
  height: 90vh;
  padding-left: 14%;
  position: relative;
  right: 14%;
  text-align: center;
  width: 114%;
}

/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
/*/////////////////////////////////////////////////////////////////////////////////// Contacts / Contacts Icons //////////////////////////////////////////////////////////////////////////////////////*/

#contacts .infobox {
  background-color: #e2e2e2;
  width: 100%;
}

.contact-heading {
  text-align: center;
  margin-bottom: 3rem;
  font-weight: 900;
}

.contacts-container {
  width: 70%;
}

.contact-cell {
  color: #black;
  padding: 2% 7%;
  font-size: 1.25rem;
}

.fa-map-marker-alt, .fa-instagram {      /* some font-awesome icons have margin-top and some doesn't ; The value was determined using chrome dev tools */
  margin-top: 1.5rem
}

/* unstyling links */

.clickable-icon {
  color: #171717;
  text-decoration: none;
}

.clickable-icon:hover {
  color: grey;
  text-decoration: none;
}

/*   */

.lang-info {
  font-size: 1.5rem;
  margin-top: 2rem;
}

/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
/*/////////////////////////////////////////////////////////////////////////////////////// Footer /////////////////////////////////////////////////////////////////////////////////////////////////*/

#footer p {
  background-color: #171717;
  color: #DDDDDD;
  font-weight:  400;
  height: 80px;
  padding: 20px;
  text-align: center;
}

/*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
/*/////////////////////////////////////////////////////////////////////////////////////// Media Query ////////////////////////////////////////////////////////////////////////////////////////////*/

@media (max-width: 991px) {

  body {
    background-image: url(bgimgsmall.png);  /* New version of background image for smaller screens */
  }

  h2 {
    font-size: 3rem;
  }

  span {
    font-size: 3.5rem;
  }

  .brand {
    font-size: 3.5rem;
  }

                                      /*  */
                                      /* Navbar */

  .nav-move {              /* A div for correct navbar moving */
    padding: 200px 0;
  }

  .navbar {
    line-height: 4;
    padding-right: 3rem;
  }

  .nav-item {
    font-size: 2.75rem;
  }

                                        /*  */
                                        /* Back to top button */

  a.back-to-top {         /* without ( a ) doesnt work idk why */
    top: 225px;
    right: 60px;       /* manually selected value*/
    font-size: 5rem;
  }

                                        /*  */
                                        /* Work Section */

   #work .infobox {
   padding: 70px 0;
   width: 100%;
  }

  #work h3 {
    font-size: 3.75rem;
    font-weight: 700;
  }

  .content-cell {
    margin-top: 8rem;
  }

  .content-photo {
    height: 975px;
    width: 650px;
  }

  /* Testing green frame changes on mobile */
  /* .content-video {
    height: 975px;
    width: 650px;
  } */

                                            /*  */
                                            /* Header */

  #about-us.nav-move {      /* не работает медиа куери с одним #about-us */
    padding-left: 54%;
    right: 54%;
    width: 154%;
  }

                                          /*  */
                                          /* Services section  */

  #services.nav-move {
    padding-left: 54%;
    right: 54%;
    width: 154%;
  }

                                            /*  */
                                            /* Contacts-section */

  #contacts-section {
    font-size: 1.5rem;
  }

  #contacts .infobox {
    padding: 70px 0;
    width: 100%;
  }

  .contacts-container {
    width: 82.5%;
  }

  .contact-cell {
    font-size: 1.5rem;
    padding: 2% 7%;
  }

  p.lang-info {
    font-size: 2rem;
  }

                                            /*  */
                                            /* Footer */

  #footer p {
    font-size: 1.5rem;
    height: 120px;
  }

}

